# hlos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  boot-linux.sh  boot-win.bat  boot.bat  hlos.sln  hlos.vcxproj  hlos.vcxproj.filters
boot/: boot.asm  linker.ld
kernel/: assembly.asm  assembly.h  beep.c  beep.h  buffer.h  driver.asm  driver.c  driver.h  event.c  event.h  exec.c  exec.h  extern.h  file.c  file.h  hlos.h  init.c  init.h  interrupt.c  interrupt.h  kernel.c  lib.c  lib.h  malloc.c  malloc.h  print.c  print.h  rand.c  rand.h  random.c  random.h  read.c  read.h  rng.c  rng.h  sleep.c  sleep.h  socket.c  socket.h  string.c  (+6 more)
